# akka-persistence-journal-publisher

./: Cargo.toml  Makefile  README.md
src/: lib.rs
src/dynamodb/: event.rs
src/proto/akka_persistence/: MessageFormats.proto
src/proto/publisher_message/: message.proto
